<resources>
    <string name="app_name">FindBerry</string>
    <string name="etuser">User</string>
    <string name="etpass">Password</string>
    <string name="blogin">Login</string>
    <string name="tvregister">Sign Up</string>
    <string name="bregister">Sign Up</string>
    <string name="bcancel">Cancel</string>
    <string name="etpassr">Retype Password</string>
    <string name="etmail">E-Mail</string>
    <string name="tLogEmpty">Please fill in all the blanks!</string>
    <string name="tLogWrongPass">Wrong password!</string>
    <string name="tLogWrongUser">The user doesn\'t exist!</string>
    <string name="tRegReg">Successfully Registered!</string>
    <string name="tRegPassNoMatch">Passwords doesn\'t match!</string>
    <string name="miPerfi">Perfil</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="maps">mapas</string>
    <string name="deliv">Delivery</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main_t">MainTActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quantity">Quantity</string>
</resources>
