<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/backcolor"
tools:context="com.example.soulbro.findberry.RegisterActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/icon" />

        <EditText style="@style/etLogReg"
            android:id="@+id/etRegUser"
            android:hint="@string/etuser"
            android:inputType="textLongMessage"/>
        <EditText style="@style/etLogReg"
            android:id="@+id/etRegPass"
            android:hint="@string/etpass"
            android:inputType="textPassword"/>
        <EditText style="@style/etLogReg"
            android:id="@+id/etRegPassR"
            android:hint="@string/etpassr"
            android:inputType="textPassword"/>
        <EditText style="@style/etLogReg"
            android:id="@+id/etRegMail"
            android:hint="@string/etmail"
            android:inputType="textEmailAddress"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button style="@style/bReg"
                android:id="@+id/bRegReg"
                android:text="@string/bregister"/>
            <Button style="@style/bReg"
                android:id="@+id/bRegCancel"
                android:text="@string/bcancel"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>

</LinearLayout>
