<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backcolor"
    tools:context="com.example.david.afinal.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/logo" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/icon" />

            <EditText style="@style/etLogReg"
                android:id="@+id/etLogUser"
                android:hint="@string/etuser"
                android:inputType="textLongMessage"/>
            <EditText style="@style/etLogReg"
                android:id="@+id/etLogPass"
                android:hint="@string/etpass"
                android:inputType="textPassword"/>
            <Button style="@style/bLog"
                android:id="@+id/bLogLog"
                android:text="@string/blogin"/>
            <TextView style="@style/tvLog"
                android:id="@+id/tvLogReg"
                android:text="@string/tvregister"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
